# cheme

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/cheme/transfer/: semi_infinite_solid.py
tests/: test_semi_infinite_solid.py
