[metadata]
name = cheme
description = A package for my chemE functions
author = noahgill409@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    cheme
python_requires = >= 3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
osrs_tools = py.typed

[flake8]
max-line-length = 79
